update/documentaion-grammar-wording-typos

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,56 +5,70 @@ description: "Start building awesome documentation in under 5 minutes"
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
 
-## 1. Deploy your docs repo
+# Getting Started with Mintlify Docs
 
-Mintlify docs are rendered from MDX files and configurations defined in our [starter template](https://github.com/mintlify/starter). We use Github to integrate your docs with your code, and make source control effortless.
+Welcome to the Mintlify documentation guide. Follow the instructions below to learn how to deploy, update and supercharge your documentations with the advanced features Mintlify offers.
+
+## 1. Deploying Your Docs Repository
+
+With Github integration, Mintlify Docs turns your MDX files and configurations from our [starter template](https://github.com/mintlify/starter) into a beautiful documentation site while making source control a breeze.
 
 <AccordionGroup>
-  <Accordion icon="github" title="Create your docs repo">
-    If you've already gone through our onboarding, this step has been completed
-    for you. Find your docs repo on your Mintlify
-    [dashboard](https://dashboard.mintlify.com). <br />
+  <Accordion icon="github" title="Creating Your Documentation Repository">
 
-    If you'd prefer to not log in with Github, you can clone our [starter
-    template](https://github.com/mintlify/starter). After cloning, reach out to [our team](mailto:support@mintlify.com) to
-    deploy this repo.
-    <img src="/images/starter-template.png" width="400px"/>
+    Now if you've gone through our onboarding process, this part is already done for you. Find your docs repository on your Mintlify [dashboard](https://dashboard.mintlify.com).
+
+    For those not wishing to log in with Github, you can still clone our [starter template](https://github.com/mintlify/starter). Once done, just get in touch with [our team](mailto:support@mintlify.com) to deploy your repository.
+
+    ![Starter Template](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/starter-template.png)
 
   </Accordion>
-    <Accordion icon="message-bot" title="Install our Github app">
-    Install our Github app to ensure that your updates are automatically deployed when you push. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). 
-  Once the bot has been successfully installed, there should be a check mark next to the commit hash of the repo.
-![](/images/github-bot-verification.png)
+
+  <Accordion icon="message-bot" title="Installing Our Github App">
+  
+    The next step is to install our Github app. This ensures that your updates are automatically deployed when you push changes. You can find the installation link on your [dashboard](https://dashboard.mintlify.com). Upon successful installation, a check mark will appear next to the commit hash of the repository.
+
+    ![Github Bot Verification](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/github-bot-verification.png)
 
   </Accordion>
+
 </AccordionGroup>
 
-## 2. Update your docs
+## 2. Updating Your Docs
+
+Mintlify enables you to easily customize the style, structure, and content of your docs.
 
 <Note>
-  Mintlify provides white-glove migrations as part of our startup plan. Request
-  one [here](mailto:josh@mintlify.com)
+	We provide a white-glove migration service as part of our startup plan.
+	Interested? Request it [here](mailto:josh@mintlify.com)
 </Note>
 
-Make your docs look and feel like you by easily updating style, structure, and content. Push changes to your Git repo to deploy.
+Follow along to learn how.
 
 <AccordionGroup>
-  <Accordion icon="rectangle-terminal" title="Set up your editing environment">
-    **Edit locally (developer recommended):**
-    1. [Install git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git).
-    2. Clone your deployment repo with the command `git clone <your-repo>`. You may need to set up [SSH keys](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent) if you haven't before. 
-    3. Open the repo in your IDE of choice.
-    4. Preview changes with our [Mintlify CLI](/development). Install with `npm i -g mintlify`
+  <Accordion icon="rectangle-terminal" title="Setting up Your Editing Environment">
+  
+    **Edit Locally (Recommended for Developers):**
 
-    **Edit online:**
-    There are two ways to edit your repo online.
-    - Find the edit button on the file you'd like to edit. This will open an in-line web editor in Github.
-    ![](/images/edit-online.png)
-    - Open your git repo in Github's [github.dev](https://github.dev) online IDE. Take the URL of your repo and replace `github.com` with `github.dev`. (e.g. `github.dev/mintlify/docs` instead of `github.com/mintlify/docs`)
+    1. Install [git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git).
+    2. Once git is installed, clone your docs repository using `git clone <your-repo>`. If you haven't set it up yet, now would be a good time to do so with these [SSH keys](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent).
+    3. Use your favorite IDE to open the repository.
+    4. Install our Mintlify CLI to preview changes with `npm i -g mintlify`. Learn more about this in our [development guide](/development).
+
+    **Editing Online:**
+
+    Here are two ways to edit your repository online:
+
+    * To edit a single file, locate and click the edit button. This will open a web editor right on Github.
+      ![Edit Online](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/edit-online.png)
+    * For a more versatile online experience, open your git repository in Github's [github.dev](https://github.dev) online IDE. Simply replace `github.com` in your repo URL with `github.dev`. For example, use `github.dev/mintlify/docs` instead of `github.com/mintlify/docs`.
 
   </Accordion>
-  <Accordion icon="palette" title="Add your branding (mint.json)">
-    Update colors, logos, configure buttons, and more in our `mint.json` file. Get started with these simple ones: 
+
+  <Accordion icon="palette" title="Customizing Your Brand (mint.json)">
+  
+    Easily customize colors, logos and buttons among other configurations in our `mint.json` file. Start with these basic configurations:
+
     ```json
     "name": "Your Company"
     "logo": {
@@ -69,56 +83,78 @@ Make your docs look and feel like you by easily updating style, structure, and c
       "dark": "#117866",
     },
     ```
-    See all supported configurations [here](/settings/global).
-  </Accordion>
-  <Accordion icon="pencil" title="Add content">
-  Add content with simple MDX files. Start your pages with: 
-  ```md
-  ---
-  title: "Page Title"
-  sidebarTitle: "Sidebar title (optional - if different from page title)"
-  description: "Subtitle (optional)"
-  ---
-  ```
-  Use [MDX syntax](/content/text) to add images, tables, lists, and more. Mintlify also offers a collection of components out of the box. You can find a complete list [here](/content/components).
-  </Accordion>
-  <Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) for your changes to update in your docs site. If you push and don't see that the Github app successfully deployed your changes, you can also manually update your docs through our [dashboard](https://dashboard.mintlify.com).
-  ![](/images/manual-update.png)
 
-</Accordion>
+    A full list of supported configurations can be found [here](/settings/global).
+
+  </Accordion>
+
+  <Accordion icon="pencil" title="Adding Content">
+
+    Add content with simple MDX files. Initiate your pages with this template:
+
+    ```md
+    ---
+    title: "Page Title"
+    sidebarTitle: "Sidebar title (optional - if different from page title)"
+    description: "Subtitle (optional)"
+    ---
+    ```
+
+    Learn more about adding images, tables, lists, and more using the [MDX syntax](/content/text). We also offer a wide array of components which are listed [here](/content/components).
+
+  </Accordion>
+
+  <Accordion icon="rocket" title="Pushing Your Changes">
+
+    Once ready, commit and push your changes to update your docs site. Here is a [guide](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) on how to do that. If the Github app is unable to successfully deploy your changes, you can manually update your docs through our [dashboard](https://dashboard.mintlify.com).
+
+    ![Manual Update](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/manual-update.png)
+
+  </Accordion>
 </AccordionGroup>
 
-## 3. Supercharge your docs
+## 3. Supercharging Your Docs
 
-Mintlify supports API reference docs, analytics, versioning, and much more to give your docs the power to accommodate any use case.
+Mintlify supports an array of advanced features like API reference docs, analytics, versioning to accommodate any of your documentation needs.
 
 <AccordionGroup>
-<Accordion icon="code-branch" title="Generate API references">
-The easiest way to set up your API references is to use an OpenAPI spec. 
-1. Add your `openapi.yaml` or `openapi.json` file into your docs repo, or define the `openapi` field in `mint.json` to a URL.
-```json
-"openapi": "link-to-your-openapi-file"
-```
-2. Autogenerate the files for your OpenAPI endpoints using our [scraper](/api-playground/openapi-generation)
-```bash
-npx @mintlify/scraping@latest openapi-file <path-or-url-to-openapi-file>
-```
-3. Add the endpoint MDX files into your `mint.json` under `navigation`
+  <Accordion icon="code-branch" title="Generating API References">
 
-Learn more about using Mintlify with OpenAPI [here](/api-playground/openapi).<br />Learn more about configuring your API auth methods [here](/api-playground/overview).<br/>You can also manually define your API references with [our syntax](/api-playground/overview).
+    You can easily set up your API references using an OpenAPI spec. Here how to d that:
 
-</Accordion>
-<Accordion icon="star" title="Add a custom domain">
-Integrate your docs seamlessly into your website by hosting them on a custom domain. Custom domain are included in the Mintlify free plan. To add a custom domain, visit your [dashboard settings](https://www.dashboard.mintlify.com/settings).
-![](/images/custom-domain.png)
-</Accordion>
-<Accordion icon="chart-simple" title="Add analytics">
-Mintlify provides in-house analytics regarding page views, search analytics, session recordings and more - accessible on your [dashboard](https://dashboard.mintlify.com/analytics). We also support integrations with dozens of analytics providers. Find the entire support list [here](/integrations/analytics/overview)
-</Accordion>
+    1. Add your `openapi.yaml` or `openapi.json` file into your docs repository or define the `openapi` field in `mint.json` with a URL.
 
+    ```json
+    "openapi": "link-to-your-openapi-file"
+    ```
+
+    2. Use our [scraper](/api-playground/openapi-generation) to autogenerate your OpenAPI endpoints files as:
+
+    ```bash
+    npx @mintlify/scraping@latest openapi-file <path-or-url-to-openapi-file>
+    ```
+
+    3. Finally, include the generated endpoint MDX files to your `mint.json` under `navigation`.
+
+    For a complete guide on using Mintlify with OpenAPI, check out [this guide](/api-playground/openapi). [This guide](/api-playground/overview) explains how to configure your API authentication methods.& For manual API references definition, explore [our syntax](/api-playground/overview).
+
+  </Accordion>
+
+  <Accordion icon="star" title="Adding a Custom Domain">
+
+    Totally integrate your docs into your website by hosting them on a custom domain. This is included even in the free Mintlify plan. Navigate to your [dashboard settings](https://www.dashboard.mintlify.com/settings) to add a custom domain.
+
+    ![Custom Domain](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/custom-domain.png)
+
+  </Accordion>
+
+  <Accordion icon="chart-simple" title="Adding Analytics">
+
+    Our in-built analytics give you insights into page views, search analytics, session recordings and more. Access these on your [dashboard](https://dashboard.mintlify.com/analytics). We also support integrations with a ranging list of analytics providers. You can find support list [here](/integrations/analytics/overview).
+
+  </Accordion>
 </AccordionGroup>
 
-## Congrats!
+## All Done!
 
-You've set up your Mintlify docs and they look amazing! For support or feedback, please visit our [community](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or reach out to us at [support@mintlify.com](mailto:support@mintlify.com).
+Congrats! You've set up your Mintlify Docs and it's looking amazing! Need support or want to give some feedback? You can join our [community](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or drop us an email at [support@mintlify.com](mailto:support@mintlify.com).
