update subdomian docs

--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Subdomain'
+title: "Subdomain"
 description: "Host the documentation at your website's custom subdomain"
 ---
 
-To host your docs on a custom subdomain, you'll need to set the custom subdomain you want on your Mintlify settings and configure your DNS settings on your domain provider.
+To set up your documentation on a custom subdomain, you'll need to set your desired custom subdomain n your Mintlify settings and configure your DNS settings on your domain provider.
 
 <Info>
   Looking to set up a custom subdirectory domain like mintlify.com/docs? Find
@@ -12,7 +12,9 @@ To host your docs on a custom subdomain, you'll need to set the custom subdomain
 
 ## Mintlify Settings
 
-Navigate to your [dashboard project](https://dashboard.mintlify.com) and click "Add custom subdomain". Submit the custom subdomain you want, ommitting `https://www`. For example, `docs.mintlify.com`.
+1. Head over to your [dashboard project](https://dashboard.mintlify.com)
+2. Click on the "Add custom subdomain".
+3. Enter your desired custom subdomain. For example, `docs.mintlify.com`.
 
 <Frame>
   <img
@@ -27,13 +29,14 @@ Navigate to your [dashboard project](https://dashboard.mintlify.com) and click "
   />
 </Frame>
 
-## Vercel Verification
+## Verification with Vercel
 
-If you're using vercel as your domain provider, you'll need to add a verification `TXT` record. This information will show on your dashboard after submitting your custom subdomain, as well as be emailed to you.
+If Vercel happens to be your domain provider, you will have to add a verification `TXT` record. This information will show on your dashboard after submitting your custom subdomain, as well as be emailed to you.
 
-## DNS Configuration
+## Configuring your DNS
 
-Navigate to the DNS settings for your domain on your domain provider. Add a new DNS entry with the following values.
+1. Proceed to your domain's DNS settings on your domain provider.
+2. Create a new DNS entry, inputting the following values:
 
 ```
 CNAME | docs | cname.vercel-dns.com
