update playground docs

--- a/api-playground/components/api/expandable.mdx
+++ b/api-playground/components/api/expandable.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Expand Object Properties'
-description: 'Toggle to display nested properties.'
-icon: 'caret-down'
+title: "Expand Object Properties"
+description: "Toggle to display nested properties."
+icon: "caret-down"
 ---
 
 <ResponseField name="user" type="User Object">
@@ -13,10 +13,6 @@ icon: 'caret-down'
 
 <ResponseField name="is_over_21" type="boolean">
   Whether the user is over 21 years old
-</ResponseField>
-
-<ResponseField name="age" type="number">
-  The last name of the user
 </ResponseField>
 
   </Expandable>
@@ -34,10 +30,6 @@ icon: 'caret-down'
     <ResponseField name="is_over_21" type="boolean">
       Whether the user is over 21 years old
     </ResponseField>
-
-    <ResponseField name="age" type="number">
-      The last name of the user
-    </ResponseField>
   </Expandable>
 </ResponseField>
 ```
@@ -46,7 +38,7 @@ icon: 'caret-down'
 
 ## Props
 
-<ResponseField name="name" type="string" required>
+<ResponseField name="title" type="string" required>
   The name of the object you are showing. Used to generate the "Show NAME" and
   "Hide NAME" text.
 </ResponseField>
