--- a/api-playground/components/api/param.mdx
+++ b/api-playground/components/api/param.mdx
@@ -4,19 +4,7 @@ description: "Set path, query, and body parameters"
 icon: "input-text"
 ---
 
-All `ParamField` components are added as interactive elements in the API playground. See the [demo](/api-playground) for an example.
-
-<ParamField path="user_id" type="string">
-  The id of the user
-</ParamField>
-
-<ParamField query="filter" type="string" required>
-  The filtering command used to sort through the users
-</ParamField>
-
-<ParamField body="user_age" type="integer" default="0">
-  The age of the user. Cannot be less than 0
-</ParamField>
+`ParamField` components help define the parameters for your APIs or SDKs. Adding a ParamField will automatically add an [API Playground](api/playground/overview).
 
 <RequestExample>
 
@@ -42,12 +30,30 @@ All `ParamField` components are added as interactive elements in the API playgro
 
 ## Props
 
-| Name                              | Type    | Description                                                                 |
-| --------------------------------- | ------- | --------------------------------------------------------------------------- |
-| `query`, `path`, `body`, `header` | string  | Whether it is a query, path, body, or header parameter followed by the name |
-| `type`                            | string  | Expected type of the parameter's value                                      |
-| `required`                        | boolean | Indicate whether the parameter is required                                  |
-| `default`                         | string  | Default value used by the server if the request does not provide a value    |
-| `initialValue`                    | any     | Value that will be used to initialize the playground                        |
-| `placeholder`                     | string  | Placeholder text for the input in the playground                            |
-| `children`                        | string  | Description of the parameter (markdown enabled)                             |
+<ParamField body="query, path, body, or header" type="string">
+  Whether it is a query, path, body, or header parameter followed by the name
+</ParamField>
+
+<ParamField body="type" type="string">
+  Expected type of the parameter's value
+</ParamField>
+
+<ParamField body="required" type="boolean">
+  Indicate whether the parameter is required
+</ParamField>
+
+<ParamField body="default" type="string">
+  Default value used by the server if the request does not provide a value
+</ParamField>
+
+<ParamField body="initialValue" type="any">
+  Value that will be used to initialize the playground
+</ParamField>
+
+<ParamField body="placeholder" type="string">
+  Placeholder text for the input in the playground
+</ParamField>
+
+<ParamField body="children" type="string">
+  Description of the parameter (markdown enabled)
+</ParamField>
