--- a/api-playground/configuration.mdx
+++ b/api-playground/configuration.mdx
@@ -39,10 +39,16 @@ This can be any one of the following REST API methods:
 
 ### Endpoint
 
-The endpoint should point to the API that the playground should call. For example, it can be something like
+The endpoint should point to the API that the playground should call. For example, it can be something like:
 
 ```bash
 https://api.example.com/v1/endpoint
+```
+
+If the endpoint has a path parameter, the path should be determined with `{}` rather than `:` - for example:
+
+```bash
+https://api.example.com/v1/endpoint/{userId}
 ```
 
 <Note>
