--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -1,13 +1,65 @@
 ---
-title: "Playground Overview"
+title: "Interactive Playground"
 description: "Enable users to interact with your API"
 api: "GET https://mintlify.com/docs/api/demo"
 hideApiMarker: true
 ---
 
-<ParamField query="message" type="string" required>
-  The message to be used in the query
+The API playground is an interactive environment to make requests and preview an API endpoint.
+
+<Info>
+  Autogenerating API pages with OpenAPI will automatically generate API
+  playground. Read more about using OpenAPI with Mintlify
+  [here](/api-playground/openapi).
+</Info>
+
+## Configurations
+
+To create an API page, you must set an `api` or `openapi` property in the page metadata. For example:
+
+```mdx
+---
+title: "Demo API"
+description: "Try this API playground on Mintlify"
+api: "GET https://mintlify.com/docs/api/demo"
+---
+```
+
+<Warning>
+  If using a folder to store your api pages, you cannot use `api` for the name
+  of the folder unless it is nested inside another folder. Folder names such as
+  `api-reference` are accepted.
+</Warning>
+
+See [Configuration](/api-playground/configuration) for more details.
+
+## Parameters (Required)
+
+Use the [ParamField component](/api-playground/components/api/param) to configure and generate the API playground and request examples, as well as the following parameter descriptions.
+
+<ParamField path="path_name" type="string">
+  The path to be used in the API. <br /> Path parameters should be denoted in
+  the API URL with curly brackets `{}`. For example:
+  `https://mintlify.com/docs/api/demo/{path_name}`
 </ParamField>
+
+<ParamField body="body_name" type="Object">
+  The body object to be used in the API. Use the [Expandable
+  component](/api-playground/components/api/expandable) to define body objects.
+  <Expandable title="Object">
+    <ParamField body="property" type="string">
+      Example property of the body object
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField query="query_name" type="string">
+  The query to be used in the API
+</ParamField>
+
+## Response Examples
+
+Use [Response Example components](/api-playground/components/api/sticky-examples) to provide an example response to your API call.
 
 <ResponseExample>
   ```json Example Response
@@ -18,21 +70,18 @@ hideApiMarker: true
   ```
 </ResponseExample>
 
-## Introduction
+Response examples can be seen on the right hand of the API playground.
 
-The API playground is an interactive environment to make requests and preview an API endpoint.
-
-To create an API page, you must set an `api` or `openapi` property in the page metadata. See [Configuration](/api-playground/configuration) for more details.
-
-<Warning>
-  If using a folder to store your api pages, you cannot use `api` for the name
-  of the folder unless it is nested inside another folder. Folder names such as
-  `api-reference` are accepted.
-</Warning>
-
-### Defining API Parameters
-
-See our [components reference](/api-playground/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenAPI](/api-playground/openapi).
+````js
+<ResponseExample>
+  ```json Example Response
+  {
+    "success": true,
+    "message": "Hello world"
+  }
+```
+</ResponseExample>
+````
 
 ## Playground Settings
 
@@ -82,19 +131,19 @@ In `mint.json`, add the following properties:
 <ResponseField name="openapi" type="string | string[]">
   A string or an array of strings of URL(s) or relative path(s) pointing to your
   OpenAPI file.
-  
-  Examples:
-  <CodeGroup>
-    ```json Absolute
-    "openapi": "https://example.com/openapi.json"
-    ```
-    ```json Relative
-    "openapi": "/openapi.json"
-    ```
-    ```json Multiple
-    "openapi": ["https://example.com/openapi1.json", "/openapi2.json", "/openapi3.json"]
-    ```
-  </CodeGroup>
+
+Examples:
+<CodeGroup>
+  ```json Absolute
+  "openapi": "https://example.com/openapi.json"
+  ```
+  ```json Relative
+  "openapi": "/openapi.json"
+  ```
+  ```json Multiple
+  "openapi": ["https://example.com/openapi1.json", "/openapi2.json", "/openapi3.json"]
+  ```
+</CodeGroup>
 
 </ResponseField>
 
