--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -9,7 +9,8 @@ description: "Add image, video, and other HTML elements"
 />
 
 <Tip>
-  Mintlify supports files up to 5 MB. To use larger files, consider a storage service like Cloudinary and embed in your Mintlify documentation!
+  Mintlify supports files up to 5 MB. To use larger files, consider a storage
+  service like Cloudinary and embed in your Mintlify documentation.
 </Tip>
 
 ## Image
@@ -137,5 +138,7 @@ Loads another HTML page within the document.
 ```
 
 <Tip>
-Although not required, we recommend adding the `alt` and `title` attributes to images for better SEO and accessability. Learn more at [image SEO](https://yoast.com/image-seo-alt-tag-and-title-tag-optimization/).
+  Although not required, we recommend adding the `alt` and `title` attributes to
+  images for better SEO and accessability. Learn more at [image
+  SEO](https://yoast.com/image-seo-alt-tag-and-title-tag-optimization/).
 </Tip>
