--- a/api-playground/openapi.mdx
+++ b/api-playground/openapi.mdx
@@ -19,6 +19,26 @@ After using the scraper, you can use the terminal output to add the files into y
 
 By using the OpenAPI reference, the name, description, parameters, responses, and the API playground will be automatically generated using the specifications.
 
+If you have multiple OpenAPI files, include the name of the OpenAPI file (without the file type `.json` or `.yaml`) to correctly map the information.
+
+<CodeGroup>
+
+```md Example
+---
+title: "Get users"
+openapi: "openapi-1 GET /users"
+---
+```
+
+```md Format
+---
+title: [title of the page]
+openapi: [openapi file name] [method] [endpoint]
+---
+```
+
+</CodeGroup>
+
 <Note>
   The method endpoint must match the endpoint specified in the OpenAPI
   specifications exactly. Nothing is displayed if the endpoint doesn't exist in
