Fix broken link

--- a/api-playground/components/api/param.mdx
+++ b/api-playground/components/api/param.mdx
@@ -4,7 +4,7 @@ description: "Set path, query, and body parameters"
 icon: "input-text"
 ---
 
-`ParamField` components help define the parameters for your APIs or SDKs. Adding a ParamField will automatically add an [API Playground](api/playground/overview).
+`ParamField` components help define the parameters for your APIs or SDKs. Adding a ParamField will automatically add an [API Playground](api-playground/overview).
 
 <RequestExample>
 
