--- a/content/text.mdx
+++ b/content/text.mdx
@@ -80,12 +80,14 @@ To create a blockquote, add a `>` in front of a paragraph.
 
 ### LaTeX
 
-Mintlify supports [LaTeX](https://www.latex-project.org) through the Latex component.
+Mintlify supports in-line [LaTeX](https://www.latex-project.org) by surrounding your LaTeX code with dollar signs (\$). For example, `$(a^2 + b^2 = c^2)$` will render as $(a^2 + b^2 = c^2)$.
 
-<Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
+Equations on their own line will can be created with double dollar signs (\$\$):
+
+$$\exists \, x \notin [0,1]$$
 
 ```md
-<Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
+$$\exists \, x \notin [0,1]$$
 ```
 
 ### Line Breaks
