Fix grammatical errors in quickstart

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,11 +7,11 @@ description: "Start building awesome documentation in under 5 minutes"
 
 # Getting Started with Mintlify Docs
 
-Welcome to the Mintlify documentation guide. Follow the instructions below to learn how to deploy, update and supercharge your documentations with the advanced features Mintlify offers.
+Welcome to the Mintlify documentation guide. Follow the instructions below to learn how to deploy, update and supercharge your documentation with the advanced features Mintlify offers.
 
 ## 1. Deploying Your Docs Repository
 
-With Github integration, Mintlify Docs turns your MDX files and configurations from our [starter template](https://github.com/mintlify/starter) into a beautiful documentation site while making source control a breeze.
+Mintlify docs are rendered from MDX files and configurations defined in our [starter template](https://github.com/mintlify/starter). We use Github to integrate your docs with your code, and make source control effortless.
 
 <AccordionGroup>
   <Accordion icon="github" title="Creating Your Documentation Repository">
@@ -39,11 +39,9 @@ With Github integration, Mintlify Docs turns your MDX files and configurations f
 Mintlify enables you to easily customize the style, structure, and content of your docs.
 
 <Note>
-	We provide a white-glove migration service as part of our startup plan.
-	Interested? Request it [here](mailto:josh@mintlify.com)
+  We provide a white-glove migration service as part of our startup plan.
+  Interested? Request it [here](mailto:josh@mintlify.com)
 </Note>
-
-Follow along to learn how.
 
 <AccordionGroup>
   <Accordion icon="rectangle-terminal" title="Setting up Your Editing Environment">
@@ -115,12 +113,12 @@ Follow along to learn how.
 
 ## 3. Supercharging Your Docs
 
-Mintlify supports an array of advanced features like API reference docs, analytics, versioning to accommodate any of your documentation needs.
+Mintlify supports an array of advanced features like API reference docs, analytics, and versioning to accommodate any of your documentation needs.
 
 <AccordionGroup>
   <Accordion icon="code-branch" title="Generating API References">
 
-    You can easily set up your API references using an OpenAPI spec. Here how to d that:
+    You can easily set up your API references using an OpenAPI spec.
 
     1. Add your `openapi.yaml` or `openapi.json` file into your docs repository or define the `openapi` field in `mint.json` with a URL.
 
@@ -142,7 +140,7 @@ Mintlify supports an array of advanced features like API reference docs, analyti
 
   <Accordion icon="star" title="Adding a Custom Domain">
 
-    Totally integrate your docs into your website by hosting them on a custom domain. This is included even in the free Mintlify plan. Navigate to your [dashboard settings](https://www.dashboard.mintlify.com/settings) to add a custom domain.
+    Integrate your docs into your website by hosting them on a custom domain. This is included even in the free Mintlify plan. Navigate to your [dashboard settings](https://www.dashboard.mintlify.com/settings) to add a custom domain.
 
     ![Custom Domain](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/custom-domain.png)
 
@@ -150,7 +148,7 @@ Mintlify supports an array of advanced features like API reference docs, analyti
 
   <Accordion icon="chart-simple" title="Adding Analytics">
 
-    Our in-built analytics give you insights into page views, search analytics, session recordings and more. Access these on your [dashboard](https://dashboard.mintlify.com/analytics). We also support integrations with a ranging list of analytics providers. You can find support list [here](/integrations/analytics/overview).
+    Our in-house analytics give you insights into page views, search analytics, session recordings and more. Access these on your [dashboard](https://dashboard.mintlify.com/analytics). We also support integrations with a range of analytics providers. You can find the list of providers [here](/integrations/analytics/overview).
 
   </Accordion>
 </AccordionGroup>
