Touch up development

--- a/development.mdx
+++ b/development.mdx
@@ -24,13 +24,13 @@ yarn global add mintlify
 
 </CodeGroup>
 
-**Step 2**: Navigate to the docs directory (where `mint.json` is located) and execute the following command:
+**Step 2**: Navigate to the docs directory (where the `mint.json` file is located) and execute the following command:
 
 ```bash
 mintlify dev
 ```
 
-Following these steps should make the documentation website available at `http://localhost:3000`.
+A local preview of your documentation will be available at `http://localhost:3000`.
 
 ### Custom Ports
 
@@ -40,7 +40,7 @@ By default, Mintlify uses port 3000. You can customize the port Mintlify runs on
 mintlify dev --port 3333
 ```
 
-If you attempt to run Mintlify on a port that's already in use, you will see an error message like:
+If you attempt to run Mintlify on a port that's already in use, you will see an error message:
 
 ```md
 Error: listen EADDRINUSE: address already in use :::3000
@@ -48,7 +48,7 @@ Error: listen EADDRINUSE: address already in use :::3000
 
 ## Mintlify Versions
 
-Please note that each CLI is associated with a specific version of Mintlify. If your local website doesn't align with the production version, please update the CLI:
+Please note that each CLI release is associated with a specific version of Mintlify. If your local website doesn't align with the production version, please update the CLI:
 
 <CodeGroup>
   ```bash npm
@@ -72,14 +72,14 @@ mintlify broken-links
 ## Deployment
 
 <Tip>
-	Check out the unlimited editors available under the [Startup
-	Plan](https://mintlify.com/pricing).
+  Check out the unlimited editors available under the [Startup
+  Plan](https://mintlify.com/pricing).
 </Tip>
 
 If the deployment is successful, you should see the following:
 
 <Frame>
-	<img src="https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/checks-passed.png" />
+  <img src="https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/checks-passed.png" />
 </Frame>
 
 ## Code Formatting
@@ -88,18 +88,9 @@ We suggest using appropriate extensions on your IDE to recognize and format MDX.
 
 ## Troubleshooting
 
-Find solutions for common issues with the CLI below:
-
 <AccordionGroup>
   <Accordion title="Issue: Mintlify is not loading">
     Solution: Update to Node v19. Try `mintlify install` and attempt loading again.
-  </Accordion>
-
-  <Accordion title="Issue: No such file or directory error message on Windows">
-    Navigate to `C:/Users/Username/.mintlify/` and delete the `mint` folder. Next, open Git Bash at the same location and run `git clone https://github.com/mintlify/mint.git`.
-
-    Repeat Step 3.
-
   </Accordion>
 
   <Accordion title="Issue: Encountering an unknown error">
