Update titles heiarchy

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,15 +1,15 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in under 5 minutes"
+title: 'Quickstart'
+description: 'Start building awesome documentation in under 5 minutes'
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
 
-# Getting Started with Mintlify Docs
+## Getting Started with Mintlify Docs
 
 Welcome to the Mintlify documentation guide. Follow the instructions below to learn how to deploy, update and supercharge your documentation with the advanced features Mintlify offers.
 
-## 1. Deploying Your Docs Repository
+### 1. Deploying Your Docs Repository
 
 Mintlify docs are rendered from MDX files and configurations defined in our [starter template](https://github.com/mintlify/starter). We use Github to integrate your docs with your code, and make source control effortless.
 
@@ -34,7 +34,7 @@ Mintlify docs are rendered from MDX files and configurations defined in our [sta
 
 </AccordionGroup>
 
-## 2. Updating Your Docs
+### 2. Updating Your Docs
 
 Mintlify enables you to easily customize the style, structure, and content of your docs.
 
@@ -111,7 +111,7 @@ Mintlify enables you to easily customize the style, structure, and content of yo
   </Accordion>
 </AccordionGroup>
 
-## 3. Supercharging Your Docs
+### 3. Supercharging Your Docs
 
 Mintlify supports an array of advanced features like API reference docs, analytics, and versioning to accommodate any of your documentation needs.
 
@@ -153,6 +153,6 @@ Mintlify supports an array of advanced features like API reference docs, analyti
   </Accordion>
 </AccordionGroup>
 
-## All Done!
+### All Done!
 
 Congrats! You've set up your Mintlify Docs and it's looking amazing! Need support or want to give some feedback? You can join our [community](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or drop us an email at [support@mintlify.com](mailto:support@mintlify.com).
