--- a/content/component-library.mdx
+++ b/content/component-library.mdx
@@ -7,8 +7,8 @@ Mintlify provides a library of build-in-components to make your docs beautiful w
 
 <Info>
   Customize the style of any component with [Tailwind
-  CSS](https://tailwindcss.com/). Simply add `className="styles that you want"`
-  onto the components
+  CSS](https://tailwindcss.com/). Simply add `className="tailwind styles"` onto
+  the component.
 </Info>
 
 ## Examples
