--- a/content/component-library.mdx
+++ b/content/component-library.mdx
@@ -6,7 +6,7 @@ description: "Enhance your docs with our pre-built components "
 Mintlify provides a library of build-in-components to make your docs beautiful without formatting things yourself. They can be added **directly within your files**. Some components are rendered from [Markdown syntax](https://www.markdownguide.org/basic-syntax/), while other components work the same way as [React components](https://reactjs.org/docs/components-and-props.html).
 
 <Info>
-  Customize the style of any component with [Tailwind
+  Customize the style of components with [Tailwind
   CSS](https://tailwindcss.com/). Simply add `className="tailwind styles"` onto
   the component.
 </Info>
