add tip onto frame

--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -8,10 +8,10 @@ description: "Add image, video, and other HTML elements"
   src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
 />
 
-<Tip>
+<Info>
   Mintlify supports files up to 5 MB. To use larger files, consider a storage
   service like Cloudinary and embed in your Mintlify documentation.
-</Tip>
+</Info>
 
 ## Image
 
