--- a/content/components/frame.mdx
+++ b/content/components/frame.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Image Frame'
-description: 'Use the Frame component to wrap images or other components in a container.'
-icon: 'frame'
+title: "Image Frame"
+description: "Use the Frame component to wrap images or other components in a container."
+icon: "frame"
 ---
 
 Frames are very helpful if you want to center an image.
@@ -12,6 +12,12 @@ Frames are very helpful if you want to center an image.
     src="https://mintlify-assets.b-cdn.net/yellowstone.jpeg"
   />
 </Frame>
+
+<Tip>
+  Customize the style of components with [Tailwind
+  CSS](https://tailwindcss.com/). Simply add `className="tailwind styles"` onto
+  the component.
+</Tip>
 
 ## Captions
 
