--- a/content/components/frame.mdx
+++ b/content/components/frame.mdx
@@ -14,9 +14,8 @@ Frames are very helpful if you want to center an image.
 </Frame>
 
 <Tip>
-  Customize the style of components with [Tailwind
-  CSS](https://tailwindcss.com/). Simply add `className="tailwind styles"` onto
-  the component.
+  Customize component styles with [Tailwind CSS](https://tailwindcss.com/).
+  Simply add `className="tailwind styles"` onto the component.
 </Tip>
 
 ## Captions
