update quickstart instructions

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
+description: "Start building awesome documentation in under 5 minutes"
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
@@ -16,9 +16,11 @@ Mintlify docs are rendered from MDX files and configurations defined in our [sta
 <AccordionGroup>
   <Accordion icon="github" title="Creating Your Documentation Repository">
 
-    Now if you've gone through our onboarding process, this part is already done for you. Find your docs repository on your Mintlify [dashboard](https://dashboard.mintlify.com).
+    If you've created a docs repo in our onboarding, this step is complete. You can find your docs repository on your Mintlify [dashboard](https://dashboard.mintlify.com).
 
-    For those not wishing to log in with Github, you can still clone our [starter template](https://github.com/mintlify/starter). Once done, just get in touch with [our team](mailto:support@mintlify.com) to deploy your repository.
+    To create your docs repo without logging into Github, follow these instructions:
+    1. Clone our [starter template](https://github.com/mintlify/starter) into a new public repo. You can make the repo private later.
+    2. [Get in touch](mailto:support@mintlify.com) with our team to deploy your repo.
 
     ![Starter Template](https://mintlify.s3-us-west-1.amazonaws.com/mintlify/images/starter-template.png)
 
